added dependencies for wps plugin

--- a/Dockerfile.geoserver
+++ b/Dockerfile.geoserver
@@ -1,19 +1,30 @@
 FROM geoceg/geoserver:2.15.0
 MAINTAINER Brian H Wilson "brian@wildsong.biz"
 
-# Install the Vector Tiles plugin
+# Install GDAL so that the ogr-* plugins will work
+RUN apt-get update && apt-get -y install gdal-bin
 
-ADD https://astuteinternet.dl.sourceforge.net/project/geoserver/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-vectortiles-plugin.zip /tmp/vectortiles.zip
-
-WORKDIR /usr/local/tomcat/webapps/geoserver/WEB-INF/lib
-RUN unzip -o /tmp/vectortiles.zip
-
-# Install the WPS plugin
-
-ADD https://astuteinternet.dl.sourceforge.net/project/geoserver/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-wps-plugin.zip /tmp/wps.zip
+# GeoServer plugins get installed here
 
 WORKDIR /usr/local/tomcat/webapps/geoserver/WEB-INF/lib
-RUN unzip -o /tmp/wps.zip
+
+# Download the wps plugin and its supporting ogr-wfs and ogr-wps plugins
+# ...the ogr plugins require GDAL to be findable on the path.
+
+ADD https://astuteinternet.dl.sourceforge.net/project/geoserver/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-wps-plugin.zip /tmp/wps-plugin.zip
+
+ADD https://astuteinternet.dl.sourceforge.net/project/geoserver/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-ogr-wfs-plugin.zip /tmp/ogr-wfs-plugin.zip
+
+ADD https://astuteinternet.dl.sourceforge.net/project/geoserver/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-ogr-wps-plugin.zip /tmp/ogr-wps-plugin.zip
+
+# Vector Tiles plugin
+
+ADD https://astuteinternet.dl.sourceforge.net/project/geoserver/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-vectortiles-plugin.zip /tmp/vectortiles-plugin.zip
+
+RUN unzip -o /tmp/ogr-wfs-plugin.zip && \
+    unzip -o /tmp/ogr-wps-plugin.zip && \
+    unzip -o /tmp/wps-plugin.zip && \
+    unzip -o /tmp/vectortiles-plugin.zip
 
 WORKDIR /usr/local/tomcat
 
