--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,10 @@
 DOMAIN=mydomain.com
 MY_EMAIL=webmaster@mydomain.com
 
+# GeoServer
+GEOSERVER_VIRTUAL_HOST=geoserver.mydomain
+GEOSERVER_DATA_DIR=/geoserver
+
 # PostGIS
 DB_ADMIN_PASSWORD=PutPasswordHere
 
@@ -9,6 +13,6 @@ PGADMIN_USER=PutAnEmailAddressHere
 PGADMIN_PASSWORD=PutPasswordHere
 PGADMIN_VIRTUAL_HOST=pgadmin.mydomain.com
 
-
-
-
+# Web server for static content
+WEB_SERVER=maps.mydomain.com
+WEB_SERVER_MAIL=webmaster@mydomain.com
