--- a/Dockerfile.geoserver
+++ b/Dockerfile.geoserver
@@ -1,9 +1,21 @@
-FROM wildsong/geoserver:latest
+FROM wildsong/geoserver:2.16.0
 MAINTAINER Brian H Wilson "brian@wildsong.biz"
 
-# Note: "BASE" is the same as GEOSERVER_VERSION, see "community-latest"
-ENV GEOSERVER_BASE_VERSION 2.15
-ENV APACHE_COMMONS_COMPRESS_VERSION 1.18
+#1 Update wildsong/docker-geoserver in github
+#2 Follow the README instructions there to manually build a new release
+#3 Update version numbers in this file, esp the one in the FROM line above
+#4 run "docker-compose down"
+#5 run "docker-compose up"
+#6 test
+#7 git commit 
+#8 git tag ???
+#9 git push
+
+# These should come from the parent geoserver, n'est pais?
+ENV GEOSERVER_VERSION 2.16.0
+ENV GEOSERVER_BASE_VERSION 2.16
+
+ENV APACHE_COMMONS_COMPRESS_VERSION 1.19
 
 # Install GDAL so that the ogr-* plugins will work
 RUN apt-get update && apt-get -y install gdal-bin
@@ -11,11 +23,17 @@ RUN apt-get update && apt-get -y install gdal-bin
 # Download the wps plugin and its supporting ogr-wfs and ogr-wps plugins
 # ...the ogr plugins require GDAL to be findable on the path.
 
+# WPS
 ADD https://download.sourceforge.net/project/geoserver/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-wps-plugin.zip /tmp/wps-plugin.zip
 
+# OGR-WFS
 ADD https://download.sourceforge.net/project/geoserver/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-ogr-wfs-plugin.zip /tmp/ogr-wfs-plugin.zip
 
+# OGR-WPS
 ADD https://download.sourceforge.net/project/geoserver/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-ogr-wps-plugin.zip /tmp/ogr-wps-plugin.zip
+
+# Printing
+ADD https://download.sourceforge.net/project/geoserver/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-printing-plugin.zip /tmp/printing-plugin.zip
 
 # Vector Tiles plugin
 
@@ -41,6 +59,7 @@ WORKDIR /usr/local/tomcat/webapps/geoserver/WEB-INF/lib
 RUN unzip -o /tmp/ogr-wfs-plugin.zip && \
     unzip -o /tmp/ogr-wps-plugin.zip && \
     unzip -o /tmp/wps-plugin.zip && \
+    unzip -o /tmp/printing-plugin.zip && \
     unzip -o /tmp/vectortiles-plugin.zip && \
     unzip -j /tmp/commons-compress.zip commons-compress-${APACHE_COMMONS_COMPRESS_VERSION}/commons-compress-${APACHE_COMMONS_COMPRESS_VERSION}.jar && \
     unzip -o /tmp/excel-plugin.zip
