--- a/Dockerfile.postgis
+++ b/Dockerfile.postgis
@@ -1,5 +1,9 @@
-FROM mdillon/postgis:11
+FROM wildsong/postgis
 MAINTAINER Brian H Wilson "brian@wildsong.biz"
+
+# This comes from the wildsong/postgis image.
+# I guess I could add plpython there too and be done with this entire step.
+#ENV PG_MAJOR
 
 RUN apt-get update \
     && apt-get install -y postgresql-plpython3-$PG_MAJOR \
