--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,17 @@
 version: '3.6'
-services:
-  db:
-    container_name: geoserver-db
-    image: wildsong/postgis:latest
-    env_file: .env
-    environment:
-      PGDATA: /var/lib/postgresql
-      POSTGRES_PASSWORD: ${DB_ADMIN_PASSWORD}
-    networks:
-      - postgis_net
-    # Exposing the port makes working from the host via psql easier.
-    ports:
-      - "5432:5432"
-    volumes:
-      - db_data:/var/lib/postgresql
-    restart: unless-stopped
 
+volumes:
+  db_backups:
+    name: geoserver_postgis_backups
+
+  geoserver_data:
+    name: geoserver_data
+    # /geoserver/gwc is the GEOWEBCACHE_CACHE_DIR and contains geowebcache.xml
+
+  geoserver_pgadmin:
+    name: geoserver_pgadmin
+
+services:
   db-backups:
     container_name: geoserver-db-backup
     image: kartoza/pg-backup:11.0
@@ -23,7 +19,7 @@ services:
     environment:
       PGUSER: postgres
       PGPASSWORD: ${DB_ADMIN_PASSWORD}
-      PGHOST: db
+      PGHOST: bellman
     networks:
       - postgis_net
     volumes:
@@ -32,6 +28,7 @@ services:
 
   geoserver:
     container_name: geoserver
+    image: wildsong/geoserver:latest
     env_file: .env
     environment:
       ENABLE_JSONP: "true"
@@ -49,6 +46,8 @@ services:
       - postgis_net
     expose:
       - "8080"
+    ports:
+      - "8080:8080"
     volumes:
       - geoserver_data:/geoserver
     restart: unless-stopped
@@ -79,7 +78,7 @@ services:
     container_name: geoserver-pgadmin
     env_file: .env
     # dpage/pgadmin4 is the official release
-    image: dpage/pgadmin4:4.14
+    image: dpage/pgadmin4:5.5
     networks:
       - proxy_net
       - postgis_net
@@ -102,20 +101,6 @@ services:
       NETWORK_ACCESS: internal
       LETSENCRYPT_HOST: ${PGADMIN_VIRTUAL_HOST}
       LETSENCRYPT_MAIL: ${MY_EMAIL}
-
-volumes:
-  db_data:
-    name: geoserver_postgis_data
-
-  db_backups:
-    name: geoserver_postgis_backups
-
-  geoserver_data:
-    name: geoserver_data
-    # /geoserver/gwc is the GEOWEBCACHE_CACHE_DIR and contains geowebcache.xml
-
-  geoserver_pgadmin:
-    name: geoserver_pgadmin
 
 networks:
   # This is a network we share with our reverse proxy
